# Automatic-Differentiation

./: CMakeLists.txt  README.md
code/: function.cpp  function.h  graph.cpp  graph.h  main.cpp  variable.cpp  variable.h
